mindah file gan

--- a/asus.html
+++ b/asus.html
@@ -83,7 +83,7 @@
                 <div class="row">
                         <div class="col-sm">
                                 <div class="card">
-                                  <a href="asus441uv.html" class="stretched-link"></a>
+                                  <a href="detail/asus441uv.html" class="stretched-link"></a>
                                   <div class="gambar">
                                     <span class="badge badge-secondary badge-pill bg-custom position-absolute mt-2 px-3 py-2 offset-md">6%</span>
                                     <img class="card-img-top" src="img/Asusx441.jpg" alt="Card image cap">
