--- a/detail/acernitro5.html
+++ b/detail/acernitro5.html
@@ -7,15 +7,15 @@
   <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-  <link rel="stylesheet" href="css/product.css">
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="../css/product.css">
+  <link rel="stylesheet" href="../css/custom.css">
   <title>Product Details</title>
 </head>
 <body>
       <!-- Navigasi Bar -->
   <nav class="navbar navbar-expand-lg bg-custom">
         <div class="container">
-          <a class="navbar-brand font-weight-bold" href="index.html">Hikari Comp</a>
+          <a class="navbar-brand font-weight-bold" href="../index.html">Hikari Comp</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -23,21 +23,21 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="../#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Merk
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="lenovo.html">Lenovo</a>
-                  <a class="dropdown-item" href="asus.html">Asus</a>
+                  <a class="dropdown-item" href="../lenovo.html">Lenovo</a>
+                  <a class="dropdown-item" href="../asus.html">Asus</a>
                   <!-- <div class="dropdown-divider"></div> -->
-                  <a class="dropdown-item" href="acer.html">Acer</a>
+                  <a class="dropdown-item" href="../acer.html">Acer</a>
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="store.html">Store</a>
+                <a class="nav-link" href="../store.html">Store</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="../contact.html">Contact</a>
               </li>
               
             </ul>
@@ -50,7 +50,7 @@
                         </button>
                     </div>
                 </div>
-                <a class="btn btn-lg ml-2" href="cart.html">
+                <a class="btn btn-lg ml-2" href="../cart.html">
                     <i class="fa fa-shopping-cart"></i> 
                 </a>
             </form>
@@ -64,7 +64,7 @@
                     <div class="col">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb bg-white">
-                                <li class="breadcrumb-item"><a href="index.html" class="text-link">Home</a></li>
+                                <li class="breadcrumb-item"><a href="../index.html" class="text-link">Home</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Product</li>
                             </ol>
                         </nav>
@@ -75,7 +75,7 @@
                         <div class="card bg-light mb-3">
                             <div class="card-body">
                                 <div class="produk-img">
-                                    <img class="img-fluid" src="img/1.jpg"/>
+                                    <img class="img-fluid" src="../img/acernitro5.jpg"/>
                                 </div>
                             </div>
                         </div>
@@ -84,21 +84,21 @@
                 <div class="col-12 col-lg-6 add_to_cart_block">
                     <div class="card bg-light mb-3">
                         <div class="card-body">
-                            <h2 class="text-left">Thinkpad T450s</h2>
+                            <h2 class="text-left">Acer nitro 5</h2>
                             <div class="reviews_product p-3 mb-2 text-left">
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star checked"></span>
                                 <span> (based on ratings) </span> 
-                                <p  class="text-xl warna prices"><strike style="color:gray" class="text-xl">Rp4.545.000</strike> Rp4.090.500</p>                                 
+                                <p  class="text-lg warna prices"><strike style="color:gray" class="text-xl">Rp.11.699.000</strike> Rp9.944.150</p>                                 
                                 <p><b>Availability :</b> In Stock</p>
                                 <p><b>Condition :</b> New</p>
-                                <p><b>Merk :</b> Lenovo</p>
+                                <p><b>Merk :</b> Acer</p>
                             </div>
                             <div class="btn buy_now_btn">
-                                <a href="payment.html"><b>buy now</b></a>
+                                <a href="../payment.html"><b>buy now</b></a>
                             </div>
                         </div>
                     </div>
@@ -125,22 +125,22 @@
                             <div role="tabpanel" id="description" class="product_tab_content active">
                             <div class="product_description_wrap">
                                 <div class="product_desc">
-                                    <h5 class="text-left">LENOVO Thinkpad T450s-5300U-8GB-500GB-Black</h5>
+                                    <h5 class="text-left">Acer  Nitro 5 AN515 52 51T2</h5>
                                     <p>Spesifikasi : </p>
                                     <ul class="list-group-flush text-left ">
-                                        <li class="list-group-item-light col-6">Prosesor Intel Core i5-5300U hingga 2.80 GHzs</li>
-                                        <li class="list-group-item-light col-6 ">RAM 8GB DDR3</li>
-                                        <li class="list-group-item-light col-6 ">HDD 500GB SATA</li>
-                                        <li class="list-group-item-light col-6 ">Wi-Fi, USB 3.0, Bluetooth</li>
-                                        <li class="list-group-item-light col-6 ">VGA Intel HD Graphics 5500 </li>
-                                        <li class="list-group-item-light col-6 ">Screen 14" HD (1366 x 786p) </li>
-                                        <li class="list-group-item-light col-6 ">Windows 10 Pro </li>
+                                        <li class="list-group-item-light col-6">Intel Core i5-8300H</li>
+                                        <li class="list-group-item-light col-6 ">RAM 8GB DDR4</li>
+                                        <li class="list-group-item-light col-6 ">1 TB HDD</li>
+                                        <li class="list-group-item-light col-6 ">Windows 10 Home</li>
+                                        <li class="list-group-item-light col-6 ">WiFi, Bluetooth, Webcam</li>
+                                        <li class="list-group-item-light col-6 ">Nvidia GeForce GTX 1050 4 GB</li>
+                                        <li class="list-group-item-light col-6 ">15.6-inch Full HD IPS LEDNvidia GeForce GTX 1050 4 GB</li>
                                     </ul>
                                     <p>Kelengkapan : </p>
                                     <ul class="list-group-flush text-left ">
-                                        <li class="list-group-item-light col-6 ">1 unit Thinkpad T450s</li>
+                                        <li class="list-group-item-light col-6 ">1 unit Thinkpad Acer Nitro 5</li>
                                         <li class="list-group-item-light col-6 ">Charger</li>
-                                        <li class="list-group-item-light col-6 ">Bonus Mouse dan Tas</li>
+                                        <li class="list-group-item-light col-6 ">Bonus Tas</li>
                                     </ul>
                             </div>
                     </div>
@@ -149,7 +149,7 @@
                 <div role="tabpanel" id="reviews" class="product_tab_content">
                         <ul class="list-unstyled text-justify mt-30">
                             <li class="media">
-                                <img src="img/person.jpeg" class="mr-3 icon-person" alt="...">
+                                <img src="../img/person.jpeg" class="mr-3 icon-person" alt="...">
                                 <div class="media-body">
                                 <h5 class="mb-0 name">safiraauliar</h5>
                                 <p class="mb-0 date">13 Des, 2019 at: 02:30pm</p>
@@ -166,7 +166,7 @@
                                 </div>
                             </li>
                             <li class="media my-4">
-                                <img src="img/person.jpeg" class="mr-3 icon-person" alt="...">
+                                <img src="../img/person.jpeg" class="mr-3 icon-person" alt="...">
                                 <div class="media-body">
                                 <h5 class="mb-0 name">Yahya Wildan</h5>
                                 <p class="mb-0 date">01 Jan, 2020 at: 02:30pm</p>
@@ -183,7 +183,7 @@
                                 </div>
                             </li>
                             <li class="media">
-                                <img src="img/person.jpeg" class="mr-3 icon-person" alt="...">
+                                <img src="../img/person.jpeg" class="mr-3 icon-person" alt="...">
                                 <div class="media-body">
                                 <h5 class="mb-0 name">Wahyu_Boy</h5>
                                 <p class="mb-0 date">05 Jan, 2020 at: 02:30pm</p>
