--- a/lenovo.html
+++ b/lenovo.html
@@ -83,7 +83,7 @@
                 <div class="row">
                     <div class="col-sm">
                         <div class="card">
-                          <a href="t450s.html" class="stretched-link"></a>
+                          <a href="detail/t450s.html" class="stretched-link"></a>
                           <div class="gambar">
                             <span class="badge badge-secondary badge-pill bg-custom position-absolute mt-2 px-3 py-2 offset-md">10%</span>
                             <img class="card-img-top" src="img/1.jpg" alt="Card image cap">
@@ -108,7 +108,7 @@
                       </div>
                     <div class="col-sm">
                         <div class="card">
-                          <a href="x1carbon.html" class="stretched-link"></a>
+                          <a href="detail/x1carbon.html" class="stretched-link"></a>
                           <div class="gambar">
                             <span class="badge badge-secondary badge-pill bg-custom position-absolute mt-2 px-3 py-2 offset-md">5%</span>
                             <img class="card-img-top" src="img/x1carbon.jpg" alt="Card image cap">
