--- a/acer.html
+++ b/acer.html
@@ -83,7 +83,7 @@
                 <div class="row">
                         <div class="col-sm">
                                 <div class="card">
-                                  <a href="acernitro5.html" class="stretched-link"></a>
+                                  <a href="detail/acernitro5.html" class="stretched-link"></a>
                                   <div class="gambar">
                                     <span class="badge badge-secondary badge-pill bg-custom position-absolute mt-2 px-3 py-2 offset-md">15%</span>
                                     <img class="card-img-top" src="img/acernitro5.jpg" alt="Card image cap">
