--- a/asus.html
+++ b/asus.html
@@ -108,7 +108,7 @@
                     <div class="col-sm">
                         <div class="card">
                         <div class="gambar">
-                            <img class="card-img-top " src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                            <img class="card-img-top " src="img/asusfx.jpg" alt="Card image cap">
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Product title</h4>
@@ -129,7 +129,7 @@
                     <div class="col-sm">
                         <div class="card">
                         <div class="gambar">
-                            <img class="card-img-top " src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                            <img class="card-img-top " src="img/asusi5.jpg" alt="Card image cap">
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Product title</h4>
@@ -150,7 +150,7 @@
                     <div class="col-sm">
                         <div class="card">
                         <div class="gambar">
-                            <img class="card-img-top " src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
+                            <img class="card-img-top " src="img/asusx441n.jpg" alt="Card image cap">
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Product title</h4>
