--- a/payment.html
+++ b/payment.html
@@ -128,6 +128,12 @@
                       <option value="9000000">DELL Inspiron</option>
                       <option value="10000000">Acer Nitro</option>
                       <option value="10000000">HP Pavillion</option>
+                      <option value="16350000">Asus FX705GE</option>
+                      <option value="8406000">Acer Aspire 3 Ryzen</option>
+                      <option value="3906000">Asus X44IN</option>
+                      <option value="3595000">Asus A43E series</option>
+                      <option value="7990000">Dell inspiron 3480</option>
+
                     </select>
                   </div>
                 </div>
