add lenovo category

--- a/lenovo.html
+++ b/lenovo.html
@@ -81,7 +81,7 @@
             </div> -->
             <div class="card-body">
                 <div class="row">
-                    <div class="col-sm">
+                    <div class="col-md-3">
                         <div class="card">
                           <a href="detail/t450s.html" class="stretched-link"></a>
                           <div class="gambar">
@@ -106,7 +106,7 @@
                         </div>
 
                       </div>
-                    <div class="col-sm">
+                    <div class="col-md-3">
                         <div class="card">
                           <a href="detail/x1carbon.html" class="stretched-link"></a>
                           <div class="gambar">
@@ -129,215 +129,12 @@
                             <span class="fas fa-heart float-right merah"></span>
                           </div>
                         </div>
-                      </div>                    
-                    <div class="col-sm">
-                        <div class="card">
-                          <a href="x1carbon.html" class="stretched-link"></a>
-                          <div class="gambar">
-                            <span class="badge badge-secondary badge-pill bg-custom position-absolute mt-2 px-3 py-2 offset-md">5%</span>
-                            <img class="card-img-top" src="img/x1carbon.jpg" alt="Card image cap">
-                          </div>
-                          <div class="card-body">
-                            <h4 class="card-title">Thinkpad X1 Carbon</h4>
-                            <p  class="text-lg warna"><strike style="color:gray" class="text-xl">Rp8.500.000</strike> Rp8.070.000</p>                                 
-                            <div class="star">
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                            </div>
-                          </div>
-                          <div class="card-footer">
-                            <small class="text-muted">Last updated 5 mins ago</small>
-                            <span class="fas fa-heart float-right merah"></span>
-                          </div>
-                        </div>
-                      </div>                    
-                    <div class="col-sm">
-                        <div class="card">
-                          <a href="x1carbon.html" class="stretched-link"></a>
-                          <div class="gambar">
-                            <span class="badge badge-secondary badge-pill bg-custom position-absolute mt-2 px-3 py-2 offset-md">5%</span>
-                            <img class="card-img-top" src="img/x1carbon.jpg" alt="Card image cap">
-                          </div>
-                          <div class="card-body">
-                            <h4 class="card-title">Thinkpad X1 Carbon</h4>
-                            <p  class="text-lg warna"><strike style="color:gray" class="text-xl">Rp8.500.000</strike> Rp8.070.000</p>                                 
-                            <div class="star">
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                            </div>
-                          </div>
-                          <div class="card-footer">
-                            <small class="text-muted">Last updated 5 mins ago</small>
-                            <span class="fas fa-heart float-right merah"></span>
-                          </div>
-                        </div>
-                      </div>                    
-                    <div class="col-sm">
-                        <div class="card">
-                          <a href="x1carbon.html" class="stretched-link"></a>
-                          <div class="gambar">
-                            <span class="badge badge-secondary badge-pill bg-custom position-absolute mt-2 px-3 py-2 offset-md">5%</span>
-                            <img class="card-img-top" src="img/x1carbon.jpg" alt="Card image cap">
-                          </div>
-                          <div class="card-body">
-                            <h4 class="card-title">Thinkpad X1 Carbon</h4>
-                            <p  class="text-lg warna"><strike style="color:gray" class="text-xl">Rp8.500.000</strike> Rp8.070.000</p>                                 
-                            <div class="star">
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                            </div>
-                          </div>
-                          <div class="card-footer">
-                            <small class="text-muted">Last updated 5 mins ago</small>
-                            <span class="fas fa-heart float-right merah"></span>
-                          </div>
-                        </div>
-                      </div>                    
+                      </div>                                         
                 </div>                           
             </div>
             <!-- </div> -->
         </div>
     </div>
-    <div class="row mt-5">
-        <div class="col-sm">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-sm">
-                        <div class="card">
-                          <a href="t450s.html" class="stretched-link"></a>
-                          <div class="gambar">
-                            <span class="badge badge-secondary badge-pill bg-custom position-absolute mt-2 px-3 py-2 offset-md">10%</span>
-                            <img class="card-img-top" src="img/1.jpg" alt="Card image cap">
-                          </div>
-                          <div class="card-body">
-                            <h4 class="card-title">Thinkpad T450s</h4>
-                            <p  class="text-lg warna"><strike style="color:gray" class="text-lg">Rp4.545.000</strike> Rp4.090.500</p>                                 
-                            <div class="star">
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star "></span>
-                            </div>
-                          </div>
-                          <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
-                            <span class="far fa-heart float-right merah"></span>
-                          </div>
-                        </div>
-
-                      </div>
-                      
-                    <div class="col-sm">
-                        <div class="card">
-                          <a href="x1carbon.html" class="stretched-link"></a>
-                          <div class="gambar">
-                            <span class="badge badge-secondary badge-pill bg-custom position-absolute mt-2 px-3 py-2 offset-md">5%</span>
-                            <img class="card-img-top" src="img/x1carbon.jpg" alt="Card image cap">
-                          </div>
-                          <div class="card-body">
-                            <h4 class="card-title">Thinkpad X1 Carbon</h4>
-                            <p  class="text-lg warna"><strike style="color:gray" class="text-xl">Rp8.500.000</strike> Rp8.070.000</p>                                 
-                            <div class="star">
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                            </div>
-                          </div>
-                          <div class="card-footer">
-                            <small class="text-muted">Last updated 5 mins ago</small>
-                            <span class="fas fa-heart float-right merah"></span>
-                          </div>
-                        </div>
-                      </div>                                          
-                    <div class="col-sm">
-                        <div class="card">
-                          <a href="x1carbon.html" class="stretched-link"></a>
-                          <div class="gambar">
-                            <span class="badge badge-secondary badge-pill bg-custom position-absolute mt-2 px-3 py-2 offset-md">5%</span>
-                            <img class="card-img-top" src="img/x1carbon.jpg" alt="Card image cap">
-                          </div>
-                          <div class="card-body">
-                            <h4 class="card-title">Thinkpad X1 Carbon</h4>
-                            <p  class="text-lg warna"><strike style="color:gray" class="text-xl">Rp8.500.000</strike> Rp8.070.000</p>                                 
-                            <div class="star">
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                            </div>
-                          </div>
-                          <div class="card-footer">
-                            <small class="text-muted">Last updated 5 mins ago</small>
-                            <span class="fas fa-heart float-right merah"></span>
-                          </div>
-                        </div>
-                      </div>                                          
-                    <div class="col-sm">
-                        <div class="card">
-                          <a href="x1carbon.html" class="stretched-link"></a>
-                          <div class="gambar">
-                            <span class="badge badge-secondary badge-pill bg-custom position-absolute mt-2 px-3 py-2 offset-md">5%</span>
-                            <img class="card-img-top" src="img/x1carbon.jpg" alt="Card image cap">
-                          </div>
-                          <div class="card-body">
-                            <h4 class="card-title">Thinkpad X1 Carbon</h4>
-                            <p  class="text-lg warna"><strike style="color:gray" class="text-xl">Rp8.500.000</strike> Rp8.070.000</p>                                 
-                            <div class="star">
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                            </div>
-                          </div>
-                          <div class="card-footer">
-                            <small class="text-muted">Last updated 5 mins ago</small>
-                            <span class="fas fa-heart float-right merah"></span>
-                          </div>
-                        </div>
-                      </div>                                          
-                    <div class="col-sm">
-                        <div class="card">
-                          <a href="x1carbon.html" class="stretched-link"></a>
-                          <div class="gambar">
-                            <span class="badge badge-secondary badge-pill bg-custom position-absolute mt-2 px-3 py-2 offset-md">5%</span>
-                            <img class="card-img-top" src="img/x1carbon.jpg" alt="Card image cap">
-                          </div>
-                          <div class="card-body">
-                            <h4 class="card-title">Thinkpad X1 Carbon</h4>
-                            <p  class="text-lg warna"><strike style="color:gray" class="text-xl">Rp8.500.000</strike> Rp8.070.000</p>                                 
-                            <div class="star">
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                              <span class="fa fa-star checked"></span>
-                            </div>
-                          </div>
-                          <div class="card-footer">
-                            <small class="text-muted">Last updated 5 mins ago</small>
-                            <span class="fas fa-heart float-right merah"></span>
-                          </div>
-                        </div>
-                      </div>                                          
-                </div>
-            </div>
-            <!-- </div> -->
-        </div>
-    </div> 
 </div>
   <!-- Footer -->
   <div class="futer mt-footer">
