add really product on cart

--- a/cart.html
+++ b/cart.html
@@ -86,8 +86,8 @@
                       </thead>
                       <tbody>
                           <tr>
-                              <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
-                              <td>Product Name Dada</td>
+                              <td><img src="./img/lenovo/X240.png" width="100px"> </td>
+                              <td>Thinkpad T450S</td>
                               <td>In stock</td>
                               <td>
                                 <div class="form-group">
@@ -107,16 +107,16 @@
                                 </div>
                               </td>
                               <td>
-                                <input type="text" readonly class="form-control-plaintext prize text-right"value="130000">
+                                <input type="text" readonly class="form-control-plaintext prize text-right"value="4090000">
                               </td>
                               <td>
-                                  <input type="text" readonly class="form-control-plaintext subtotal text-right"value="130000">
+                                  <input type="text" readonly class="form-control-plaintext subtotal text-right"value="4090000">
                               </td>
                               <td class="text-right"><button class="btn btn-sm btn-secondary"><i class="fa fa-trash-alt"></i> </button> </td>
                           </tr>
                           <tr>
-                              <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
-                              <td>Product Name Dada</td>
+                              <td><img src="./img/x1carbon.jpg" width="100px"> </td>
+                              <td>Thinkpad X1 Carbon</td>
                               <td>In stock</td>
                               <td>
                                 <div class="form-group">
@@ -136,10 +136,10 @@
                                 </div>
                               </td>
                               <td>
-                                <input type="text" readonly class="form-control-plaintext prize2 text-right"value="130000">
+                                <input type="text" readonly class="form-control-plaintext prize2 text-right"value="8070000">
                               </td>
                               <td>
-                                  <input type="text" readonly class="form-control-plaintext subtotal2 text-right"value="130000">
+                                  <input type="text" readonly class="form-control-plaintext subtotal2 text-right"value="8070000">
                               </td>
                               <td class="text-right"><button class="btn btn-sm btn-secondary"><i class="fa fa-trash-alt"></i> </button> </td>
                           </tr>
@@ -153,7 +153,7 @@
                     
                   </div>
                   <div class="col-sm-12 col-md-6 text-right">
-                      <h5 class="text-left"><span class="font-weight-bold">Total </span><span class="total"> Rp 260000</span></h5>
+                      <h5 class="text-left"><span class="font-weight-bold">Total </span><span class="total"> Rp 12160000</span></h5>
                       <div class="btn buy_now_btn">
                         <a class="fv-btn" href="payment.html">submit review</a>
                     </div>
